assignments/PA3/cool.output
Terminals unused in grammar

   ERROR


State 55 conflicts: 7 shift/reduce
State 58 conflicts: 7 shift/reduce
State 62 conflicts: 7 shift/reduce
State 76 conflicts: 7 shift/reduce
State 83 conflicts: 7 shift/reduce
State 84 conflicts: 7 shift/reduce
State 85 conflicts: 7 shift/reduce
State 86 conflicts: 7 shift/reduce
State 87 conflicts: 7 shift/reduce
State 88 conflicts: 7 shift/reduce
State 89 conflicts: 7 shift/reduce
State 116 conflicts: 7 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' dummy_feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';'

    6 dummy_feature_list: %empty
    7                   | true_feature_list

    8 true_feature_list: feature
    9                  | true_feature_list feature

   10 feature: OBJECTID '(' dummy_formal_list ')' ':' TYPEID '{' expr '}' ';'
   11        | OBJECTID ':' TYPEID ';'
   12        | OBJECTID ':' TYPEID ASSIGN expr ';'

   13 dummy_formal_list: %empty
   14                  | dummy_formal_list formal

   15 formal: OBJECTID ':' TYPEID

   16 expr: OBJECTID ASSIGN expr
   17     | OBJECTID '(' dummy_expr_para_list ')'
   18     | IF expr THEN expr ELSE expr FI
   19     | WHILE expr LOOP expr POOL
   20     | '{' exprs '}'
   21     | LET OBJECTID ':' TYPEID ASSIGN expr IN expr
   22     | CASE expr OF cases ESAC
   23     | NEW TYPEID
   24     | ISVOID expr
   25     | expr '+' expr
   26     | expr '-' expr
   27     | expr '*' expr
   28     | expr '/' expr
   29     | '~' expr
   30     | expr '<' expr
   31     | expr LE expr
   32     | expr '=' expr
   33     | NOT expr
   34     | '(' expr ')'
   35     | INT_CONST
   36     | STR_CONST
   37     | OBJECTID
   38     | BOOL_CONST

   39 exprs: expr ';'
   40      | exprs expr ';'

   41 cases: OBJECTID ':' TYPEID DARROW expr ';'
   42      | cases OBJECTID ':' TYPEID DARROW expr ';'

   43 dummy_expr_para_list: %empty
   44                     | expr
   45                     | dummy_expr_para_list ',' expr


Terminals, with rules where they appear

$end (0) 0
'(' (40) 10 17 34
')' (41) 10 17 34
'*' (42) 27
'+' (43) 25
',' (44) 45
'-' (45) 26
'/' (47) 28
':' (58) 10 11 12 15 21 41 42
';' (59) 4 5 10 11 12 39 40 41 42
'<' (60) 30
'=' (61) 32
'{' (123) 4 5 10 20
'}' (125) 4 5 10 20
'~' (126) 29
error (256)
CLASS (258) 4 5
ELSE (259) 18
FI (260) 18
IF (261) 18
IN (262) 21
INHERITS (263) 5
LET (264) 21
LOOP (265) 19
POOL (266) 19
THEN (267) 18
WHILE (268) 19
CASE (269) 22
ESAC (270) 22
OF (271) 22
DARROW (272) 41 42
NEW (273) 23
ISVOID (274) 24
STR_CONST (275) 36
INT_CONST (276) 35
BOOL_CONST (277) 38
TYPEID (278) 4 5 10 11 12 15 21 23 41 42
OBJECTID (279) 10 11 12 15 16 17 21 37 41 42
ASSIGN (280) 12 16 21
NOT (281) 33
LE (282) 31
ERROR (283)


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
program (44)
    on left: 1, on right: 0
class_list (45)
    on left: 2 3, on right: 1 3
class (46)
    on left: 4 5, on right: 2 3
dummy_feature_list (47)
    on left: 6 7, on right: 4 5
true_feature_list (48)
    on left: 8 9, on right: 7 9
feature (49)
    on left: 10 11 12, on right: 8 9
dummy_formal_list (50)
    on left: 13 14, on right: 10 14
formal (51)
    on left: 15, on right: 14
expr (52)
    on left: 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33
    34 35 36 37 38, on right: 10 12 16 18 19 21 22 24 25 26 27 28 29
    30 31 32 33 34 39 40 41 42 44 45
exprs (53)
    on left: 39 40, on right: 20 40
cases (54)
    on left: 41 42, on right: 22 42
dummy_expr_para_list (55)
    on left: 43 44 45, on right: 17 45


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    4 class: CLASS . TYPEID '{' dummy_feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';'

    TYPEID  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 7


State 4

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 5

    4 class: CLASS TYPEID . '{' dummy_feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' dummy_feature_list '}' ';'

    INHERITS  shift, and go to state 8
    '{'       shift, and go to state 9


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 8

    5 class: CLASS TYPEID INHERITS . TYPEID '{' dummy_feature_list '}' ';'

    TYPEID  shift, and go to state 10


State 9

    4 class: CLASS TYPEID '{' . dummy_feature_list '}' ';'

    OBJECTID  shift, and go to state 11

    $default  reduce using rule 6 (dummy_feature_list)

    dummy_feature_list  go to state 12
    true_feature_list   go to state 13
    feature             go to state 14


State 10

    5 class: CLASS TYPEID INHERITS TYPEID . '{' dummy_feature_list '}' ';'

    '{'  shift, and go to state 15


State 11

   10 feature: OBJECTID . '(' dummy_formal_list ')' ':' TYPEID '{' expr '}' ';'
   11        | OBJECTID . ':' TYPEID ';'
   12        | OBJECTID . ':' TYPEID ASSIGN expr ';'

    '('  shift, and go to state 16
    ':'  shift, and go to state 17


State 12

    4 class: CLASS TYPEID '{' dummy_feature_list . '}' ';'

    '}'  shift, and go to state 18


State 13

    7 dummy_feature_list: true_feature_list .
    9 true_feature_list: true_feature_list . feature

    OBJECTID  shift, and go to state 11

    $default  reduce using rule 7 (dummy_feature_list)

    feature  go to state 19


State 14

    8 true_feature_list: feature .

    $default  reduce using rule 8 (true_feature_list)


State 15

    5 class: CLASS TYPEID INHERITS TYPEID '{' . dummy_feature_list '}' ';'

    OBJECTID  shift, and go to state 11

    $default  reduce using rule 6 (dummy_feature_list)

    dummy_feature_list  go to state 20
    true_feature_list   go to state 13
    feature             go to state 14


State 16

   10 feature: OBJECTID '(' . dummy_formal_list ')' ':' TYPEID '{' expr '}' ';'

    $default  reduce using rule 13 (dummy_formal_list)

    dummy_formal_list  go to state 21


State 17

   11 feature: OBJECTID ':' . TYPEID ';'
   12        | OBJECTID ':' . TYPEID ASSIGN expr ';'

    TYPEID  shift, and go to state 22


State 18

    4 class: CLASS TYPEID '{' dummy_feature_list '}' . ';'

    ';'  shift, and go to state 23


State 19

    9 true_feature_list: true_feature_list feature .

    $default  reduce using rule 9 (true_feature_list)


State 20

    5 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list . '}' ';'

    '}'  shift, and go to state 24


State 21

   10 feature: OBJECTID '(' dummy_formal_list . ')' ':' TYPEID '{' expr '}' ';'
   14 dummy_formal_list: dummy_formal_list . formal

    OBJECTID  shift, and go to state 25
    ')'       shift, and go to state 26

    formal  go to state 27


State 22

   11 feature: OBJECTID ':' TYPEID . ';'
   12        | OBJECTID ':' TYPEID . ASSIGN expr ';'

    ASSIGN  shift, and go to state 28
    ';'     shift, and go to state 29


State 23

    4 class: CLASS TYPEID '{' dummy_feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 24

    5 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' . ';'

    ';'  shift, and go to state 30


State 25

   15 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 31


State 26

   10 feature: OBJECTID '(' dummy_formal_list ')' . ':' TYPEID '{' expr '}' ';'

    ':'  shift, and go to state 32


State 27

   14 dummy_formal_list: dummy_formal_list formal .

    $default  reduce using rule 14 (dummy_formal_list)


State 28

   12 feature: OBJECTID ':' TYPEID ASSIGN . expr ';'

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '{'         shift, and go to state 44
    '('         shift, and go to state 45
    '~'         shift, and go to state 46

    expr  go to state 47


State 29

   11 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 11 (feature)


State 30

    5 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 31

   15 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 48


State 32

   10 feature: OBJECTID '(' dummy_formal_list ')' ':' . TYPEID '{' expr '}' ';'

    TYPEID  shift, and go to state 49


State 33

   18 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '{'         shift, and go to state 44
    '('         shift, and go to state 45
    '~'         shift, and go to state 46

    expr  go to state 50


State 34

   21 expr: LET . OBJECTID ':' TYPEID ASSIGN expr IN expr

    OBJECTID  shift, and go to state 51


State 35

   19 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '{'         shift, and go to state 44
    '('         shift, and go to state 45
    '~'         shift, and go to state 46

    expr  go to state 52


State 36

   22 expr: CASE . expr OF cases ESAC

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '{'         shift, and go to state 44
    '('         shift, and go to state 45
    '~'         shift, and go to state 46

    expr  go to state 53


State 37

   23 expr: NEW . TYPEID

    TYPEID  shift, and go to state 54


State 38

   24 expr: ISVOID . expr

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '{'         shift, and go to state 44
    '('         shift, and go to state 45
    '~'         shift, and go to state 46

    expr  go to state 55


State 39

   36 expr: STR_CONST .

    $default  reduce using rule 36 (expr)


State 40

   35 expr: INT_CONST .

    $default  reduce using rule 35 (expr)


State 41

   38 expr: BOOL_CONST .

    $default  reduce using rule 38 (expr)


State 42

   16 expr: OBJECTID . ASSIGN expr
   17     | OBJECTID . '(' dummy_expr_para_list ')'
   37     | OBJECTID .

    ASSIGN  shift, and go to state 56
    '('     shift, and go to state 57

    $default  reduce using rule 37 (expr)


State 43

   33 expr: NOT . expr

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '{'         shift, and go to state 44
    '('         shift, and go to state 45
    '~'         shift, and go to state 46

    expr  go to state 58


State 44

   20 expr: '{' . exprs '}'

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '{'         shift, and go to state 44
    '('         shift, and go to state 45
    '~'         shift, and go to state 46

    expr   go to state 59
    exprs  go to state 60


State 45

   34 expr: '(' . expr ')'

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '{'         shift, and go to state 44
    '('         shift, and go to state 45
    '~'         shift, and go to state 46

    expr  go to state 61


State 46

   29 expr: '~' . expr

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '{'         shift, and go to state 44
    '('         shift, and go to state 45
    '~'         shift, and go to state 46

    expr  go to state 62


State 47

   12 feature: OBJECTID ':' TYPEID ASSIGN expr . ';'
   25 expr: expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . '/' expr
   30     | expr . '<' expr
   31     | expr . LE expr
   32     | expr . '=' expr

    LE   shift, and go to state 63
    ';'  shift, and go to state 64
    '+'  shift, and go to state 65
    '-'  shift, and go to state 66
    '*'  shift, and go to state 67
    '/'  shift, and go to state 68
    '<'  shift, and go to state 69
    '='  shift, and go to state 70


State 48

   15 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 15 (formal)


State 49

   10 feature: OBJECTID '(' dummy_formal_list ')' ':' TYPEID . '{' expr '}' ';'

    '{'  shift, and go to state 71


State 50

   18 expr: IF expr . THEN expr ELSE expr FI
   25     | expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . '/' expr
   30     | expr . '<' expr
   31     | expr . LE expr
   32     | expr . '=' expr

    THEN  shift, and go to state 72
    LE    shift, and go to state 63
    '+'   shift, and go to state 65
    '-'   shift, and go to state 66
    '*'   shift, and go to state 67
    '/'   shift, and go to state 68
    '<'   shift, and go to state 69
    '='   shift, and go to state 70


State 51

   21 expr: LET OBJECTID . ':' TYPEID ASSIGN expr IN expr

    ':'  shift, and go to state 73


State 52

   19 expr: WHILE expr . LOOP expr POOL
   25     | expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . '/' expr
   30     | expr . '<' expr
   31     | expr . LE expr
   32     | expr . '=' expr

    LOOP  shift, and go to state 74
    LE    shift, and go to state 63
    '+'   shift, and go to state 65
    '-'   shift, and go to state 66
    '*'   shift, and go to state 67
    '/'   shift, and go to state 68
    '<'   shift, and go to state 69
    '='   shift, and go to state 70


State 53

   22 expr: CASE expr . OF cases ESAC
   25     | expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . '/' expr
   30     | expr . '<' expr
   31     | expr . LE expr
   32     | expr . '=' expr

    OF   shift, and go to state 75
    LE   shift, and go to state 63
    '+'  shift, and go to state 65
    '-'  shift, and go to state 66
    '*'  shift, and go to state 67
    '/'  shift, and go to state 68
    '<'  shift, and go to state 69
    '='  shift, and go to state 70


State 54

   23 expr: NEW TYPEID .

    $default  reduce using rule 23 (expr)


State 55

   24 expr: ISVOID expr .
   25     | expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . '/' expr
   30     | expr . '<' expr
   31     | expr . LE expr
   32     | expr . '=' expr

    LE   shift, and go to state 63
    '+'  shift, and go to state 65
    '-'  shift, and go to state 66
    '*'  shift, and go to state 67
    '/'  shift, and go to state 68
    '<'  shift, and go to state 69
    '='  shift, and go to state 70

    LE        [reduce using rule 24 (expr)]
    '+'       [reduce using rule 24 (expr)]
    '-'       [reduce using rule 24 (expr)]
    '*'       [reduce using rule 24 (expr)]
    '/'       [reduce using rule 24 (expr)]
    '<'       [reduce using rule 24 (expr)]
    '='       [reduce using rule 24 (expr)]
    $default  reduce using rule 24 (expr)


State 56

   16 expr: OBJECTID ASSIGN . expr

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '{'         shift, and go to state 44
    '('         shift, and go to state 45
    '~'         shift, and go to state 46

    expr  go to state 76


State 57

   17 expr: OBJECTID '(' . dummy_expr_para_list ')'

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '{'         shift, and go to state 44
    '('         shift, and go to state 45
    '~'         shift, and go to state 46

    $default  reduce using rule 43 (dummy_expr_para_list)

    expr                  go to state 77
    dummy_expr_para_list  go to state 78


State 58

   25 expr: expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . '/' expr
   30     | expr . '<' expr
   31     | expr . LE expr
   32     | expr . '=' expr
   33     | NOT expr .

    LE   shift, and go to state 63
    '+'  shift, and go to state 65
    '-'  shift, and go to state 66
    '*'  shift, and go to state 67
    '/'  shift, and go to state 68
    '<'  shift, and go to state 69
    '='  shift, and go to state 70

    LE        [reduce using rule 33 (expr)]
    '+'       [reduce using rule 33 (expr)]
    '-'       [reduce using rule 33 (expr)]
    '*'       [reduce using rule 33 (expr)]
    '/'       [reduce using rule 33 (expr)]
    '<'       [reduce using rule 33 (expr)]
    '='       [reduce using rule 33 (expr)]
    $default  reduce using rule 33 (expr)


State 59

   25 expr: expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . '/' expr
   30     | expr . '<' expr
   31     | expr . LE expr
   32     | expr . '=' expr
   39 exprs: expr . ';'

    LE   shift, and go to state 63
    ';'  shift, and go to state 79
    '+'  shift, and go to state 65
    '-'  shift, and go to state 66
    '*'  shift, and go to state 67
    '/'  shift, and go to state 68
    '<'  shift, and go to state 69
    '='  shift, and go to state 70


State 60

   20 expr: '{' exprs . '}'
   40 exprs: exprs . expr ';'

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '{'         shift, and go to state 44
    '}'         shift, and go to state 80
    '('         shift, and go to state 45
    '~'         shift, and go to state 46

    expr  go to state 81


State 61

   25 expr: expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . '/' expr
   30     | expr . '<' expr
   31     | expr . LE expr
   32     | expr . '=' expr
   34     | '(' expr . ')'

    LE   shift, and go to state 63
    ')'  shift, and go to state 82
    '+'  shift, and go to state 65
    '-'  shift, and go to state 66
    '*'  shift, and go to state 67
    '/'  shift, and go to state 68
    '<'  shift, and go to state 69
    '='  shift, and go to state 70


State 62

   25 expr: expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . '/' expr
   29     | '~' expr .
   30     | expr . '<' expr
   31     | expr . LE expr
   32     | expr . '=' expr

    LE   shift, and go to state 63
    '+'  shift, and go to state 65
    '-'  shift, and go to state 66
    '*'  shift, and go to state 67
    '/'  shift, and go to state 68
    '<'  shift, and go to state 69
    '='  shift, and go to state 70

    LE        [reduce using rule 29 (expr)]
    '+'       [reduce using rule 29 (expr)]
    '-'       [reduce using rule 29 (expr)]
    '*'       [reduce using rule 29 (expr)]
    '/'       [reduce using rule 29 (expr)]
    '<'       [reduce using rule 29 (expr)]
    '='       [reduce using rule 29 (expr)]
    $default  reduce using rule 29 (expr)


State 63

   31 expr: expr LE . expr

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '{'         shift, and go to state 44
    '('         shift, and go to state 45
    '~'         shift, and go to state 46

    expr  go to state 83


State 64

   12 feature: OBJECTID ':' TYPEID ASSIGN expr ';' .

    $default  reduce using rule 12 (feature)


State 65

   25 expr: expr '+' . expr

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '{'         shift, and go to state 44
    '('         shift, and go to state 45
    '~'         shift, and go to state 46

    expr  go to state 84


State 66

   26 expr: expr '-' . expr

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '{'         shift, and go to state 44
    '('         shift, and go to state 45
    '~'         shift, and go to state 46

    expr  go to state 85


State 67

   27 expr: expr '*' . expr

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '{'         shift, and go to state 44
    '('         shift, and go to state 45
    '~'         shift, and go to state 46

    expr  go to state 86


State 68

   28 expr: expr '/' . expr

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '{'         shift, and go to state 44
    '('         shift, and go to state 45
    '~'         shift, and go to state 46

    expr  go to state 87


State 69

   30 expr: expr '<' . expr

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '{'         shift, and go to state 44
    '('         shift, and go to state 45
    '~'         shift, and go to state 46

    expr  go to state 88


State 70

   32 expr: expr '=' . expr

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '{'         shift, and go to state 44
    '('         shift, and go to state 45
    '~'         shift, and go to state 46

    expr  go to state 89


State 71

   10 feature: OBJECTID '(' dummy_formal_list ')' ':' TYPEID '{' . expr '}' ';'

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '{'         shift, and go to state 44
    '('         shift, and go to state 45
    '~'         shift, and go to state 46

    expr  go to state 90


State 72

   18 expr: IF expr THEN . expr ELSE expr FI

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '{'         shift, and go to state 44
    '('         shift, and go to state 45
    '~'         shift, and go to state 46

    expr  go to state 91


State 73

   21 expr: LET OBJECTID ':' . TYPEID ASSIGN expr IN expr

    TYPEID  shift, and go to state 92


State 74

   19 expr: WHILE expr LOOP . expr POOL

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '{'         shift, and go to state 44
    '('         shift, and go to state 45
    '~'         shift, and go to state 46

    expr  go to state 93


State 75

   22 expr: CASE expr OF . cases ESAC

    OBJECTID  shift, and go to state 94

    cases  go to state 95


State 76

   16 expr: OBJECTID ASSIGN expr .
   25     | expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . '/' expr
   30     | expr . '<' expr
   31     | expr . LE expr
   32     | expr . '=' expr

    LE   shift, and go to state 63
    '+'  shift, and go to state 65
    '-'  shift, and go to state 66
    '*'  shift, and go to state 67
    '/'  shift, and go to state 68
    '<'  shift, and go to state 69
    '='  shift, and go to state 70

    LE        [reduce using rule 16 (expr)]
    '+'       [reduce using rule 16 (expr)]
    '-'       [reduce using rule 16 (expr)]
    '*'       [reduce using rule 16 (expr)]
    '/'       [reduce using rule 16 (expr)]
    '<'       [reduce using rule 16 (expr)]
    '='       [reduce using rule 16 (expr)]
    $default  reduce using rule 16 (expr)


State 77

   25 expr: expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . '/' expr
   30     | expr . '<' expr
   31     | expr . LE expr
   32     | expr . '=' expr
   44 dummy_expr_para_list: expr .

    LE   shift, and go to state 63
    '+'  shift, and go to state 65
    '-'  shift, and go to state 66
    '*'  shift, and go to state 67
    '/'  shift, and go to state 68
    '<'  shift, and go to state 69
    '='  shift, and go to state 70

    $default  reduce using rule 44 (dummy_expr_para_list)


State 78

   17 expr: OBJECTID '(' dummy_expr_para_list . ')'
   45 dummy_expr_para_list: dummy_expr_para_list . ',' expr

    ')'  shift, and go to state 96
    ','  shift, and go to state 97


State 79

   39 exprs: expr ';' .

    $default  reduce using rule 39 (exprs)


State 80

   20 expr: '{' exprs '}' .

    $default  reduce using rule 20 (expr)


State 81

   25 expr: expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . '/' expr
   30     | expr . '<' expr
   31     | expr . LE expr
   32     | expr . '=' expr
   40 exprs: exprs expr . ';'

    LE   shift, and go to state 63
    ';'  shift, and go to state 98
    '+'  shift, and go to state 65
    '-'  shift, and go to state 66
    '*'  shift, and go to state 67
    '/'  shift, and go to state 68
    '<'  shift, and go to state 69
    '='  shift, and go to state 70


State 82

   34 expr: '(' expr ')' .

    $default  reduce using rule 34 (expr)


State 83

   25 expr: expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . '/' expr
   30     | expr . '<' expr
   31     | expr . LE expr
   31     | expr LE expr .
   32     | expr . '=' expr

    LE   shift, and go to state 63
    '+'  shift, and go to state 65
    '-'  shift, and go to state 66
    '*'  shift, and go to state 67
    '/'  shift, and go to state 68
    '<'  shift, and go to state 69
    '='  shift, and go to state 70

    LE        [reduce using rule 31 (expr)]
    '+'       [reduce using rule 31 (expr)]
    '-'       [reduce using rule 31 (expr)]
    '*'       [reduce using rule 31 (expr)]
    '/'       [reduce using rule 31 (expr)]
    '<'       [reduce using rule 31 (expr)]
    '='       [reduce using rule 31 (expr)]
    $default  reduce using rule 31 (expr)


State 84
